update: wayspot
